<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uca.tfg_ismaelsantos.notificaciones_rfid.MainActivity" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@mipmap/ic_add_circle_outline_black_24dp"
            android:title="@string/item1Drawer"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@mipmap/ic_block_black_24dp"
            android:title="@string/item2Drawer" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@mipmap/ic_check_black_24dp"
            android:title="@string/item3Drawer" />


        <!-- Sección de Configuración -->
        <item
            android:title=""
            >
            <menu>
                <item
                    android:id="@+id/about"
                    android:icon="@mipmap/ic_info_outline_black_24dp"
                    android:title="@string/about" />
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@mipmap/ic_power_settings_new_black_24dp"
                    android:title="@string/log_out" />
            </menu>
        </item>>




    </group>


</menu>