<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@mipmap/background_material4"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:layout_marginBottom="25dp"
    android:gravity="bottom">


    <!-- Imagen de perfil -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_superadmin_nombre"
        app:border_color="@android:color/white"
        app:border_width="1dp" />

    <TextView
        android:id="@+id/username_nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/navUsername"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/email_nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/navEmail"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
        android:id="@+id/name_nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/navNombreCompleto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


</LinearLayout>