<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />
    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/smoothProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="0dp"
        android:indeterminate="true"
        android:minHeight="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@color/white"
        android:elevation="1sp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imagenTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/tarjeta_red"/>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >


        <TextView
            android:id="@+id/idTarjetaTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idTarjeta"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/idTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/idTarjetaTab"
            />


        <TextView
            android:id="@+id/uidTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uidTarjeta"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/idTarjeta"/>
        <TextView
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:layout_below="@+id/idTarjeta"
            android:layout_toRightOf="@id/uidTab"/>


        <TextView
            android:id="@+id/saldoTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldoTarjeta"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/uid"/>
        <TextView
            android:id="@+id/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/uid"
            android:layout_toRightOf="@id/saldoTab"/>


        <TextView
            android:id="@+id/fechaActualizacionTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaActualizacionTarjeta"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_below="@+id/saldo"/>
        <TextView
            android:id="@+id/fechaActualizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/saldo"
            android:layout_toRightOf="@id/fechaActualizacionTab"/>


        <TextView
            android:id="@+id/fechaCreacionTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaCreacionTarjeta"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_below="@+id/fechaActualizacion"/>
        <TextView
            android:id="@+id/fechaCreacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/fechaActualizacion"
            android:layout_toRightOf="@id/fechaCreacionTab"/>


        <TextView
            android:id="@+id/fechaTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_below="@+id/fechaCreacion"/>
        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/fechaCreacion"
            android:layout_toRightOf="@id/fechaTab"/>

        <TextView
            android:id="@+id/usuarioTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuarioTarjeta"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_below="@+id/fecha"/>
        <TextView
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:onClick="onClick"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/fecha"
            android:layout_toRightOf="@id/usuarioTab"/>


    </RelativeLayout>
</LinearLayout>
</LinearLayout>